# news-digest

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  MitRssNews.JSON  README.md  TCRssNews.JSON  WiredRssNews.JSON  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sources.yaml  test_cleaner.py
pipeline/: bot.py  config.py  database.py  logger.py  models.py  scheduler.py  summarizer.py
pipeline/collectors/: __init__.py  api_collector.py  base.py  rss_collector.py  scraper.py
pipeline/delivery/: base.py  telegram.py
pipeline/processors/: __init__.py  cleaner.py  deduplicator.py
