[project]
name = "news-digest"
version = "0.1.0"
description = ""
authors = [
    {name = "cnxls",email = "oles.melinyshyn2007@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser (>=6.0.12,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "openai (>=2.11.0,<3.0.0)",
    "anthropic (>=0.75.0,<0.76.0)",
    "google (>=3.0.0,<4.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "pipeline"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
